# stitch

./: CMakeLists.txt  README.md  clean.sh  configure.sh  issue.md
include/: myStitch.h
src/: main.cpp  myStitch.cpp
